[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssp-bayes-opt"
version = "0.1.0"
description = "An implementation of an efficient Bayesian optimization algorithm using Spatial Semantic Pointers"
license = { text = "TBD" }
authors = [
    { name = "Michael Furlong", email = "michael.furlong@uwaterloo.ca" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "typing-extensions",
]

[project.optional-dependencies]
# Core scientific/BO stack without any Nengo dependencies
basic = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=1.3",
    "networkx>=3.0",
    "tqdm",
    "torch>=2.0",
    "gpytorch>=1.6",
    "botorch>=0.11",
    "optuna>=4.0",
    "wandb",
]
# Nengo spiking neural network models (modern Nengo stack)
nengo = [
    "ssp-bayes-opt[basic]",
    "nengo>=4.0",
    "nengo-spa>=2.0",
    "nengo-extras>=0.5",
    "nengo-ocl>=3.0",
    "nengolib",
    "pyopencl",
]
# Nengo on SpiNNaker neuromorphic hardware (requires old Nengo 2.x)
spinnaker = [
    "nengo<3",
    "nengo-spinnaker",
    "rig",
    "bitarray",
    "sentinel",
    "toposort",
    "enum-compat",
    "matplotlib>=3.7",
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.0",
]
# Mixed-variable/combinatorial BO via MCBO
mcbo = [
    "ssp-bayes-opt[basic]",
    "nengo>=4.0",
    "nengo-loihi>=1.1",
    "nengo-ocl>=3.0",
    "pyopencl",
    "numba>=0.56",
    "llvmlite",
    "cma>=3.0",
    "pygraphviz",
    "pymoo>=0.6",
    "xgboost>=1.6",
    "viennarna",
    "autograd",
    "scikit-posthocs",
    "statsmodels",
    "disjoint-set",
]
# NAS-Bench neural architecture search benchmark tasks
nas = [
    "ssp-bayes-opt[basic]",
    "nasbench @ git+https://github.com/google-research/nasbench.git",
    "tensorflow>=2.18",
    "keras>=3.0",
    "bayesian-optimization",
    "bayesmark",
    "hyperopt",
    "nevergrad",
    "opentuner",
    "pySOT",
    "cma>=3.0",
    "scikit-optimize",
    "xarray",
]
dev = [
    "pytest",
    "mypy",
    "jupyterlab",
]

[tool.uv]
# spinnaker requires nengo<3; nengo/mcbo require nengo>=4 — never install together
conflicts = [
    [
        { extra = "spinnaker" },
        { extra = "nengo" },
    ],
    [
        { extra = "spinnaker" },
        { extra = "mcbo" },
    ],
]

[tool.hatch.build.targets.wheel]
packages = ["ssp_bayes_opt"]
